--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   text-align: center;
   font-family: "Kaisei Tokumin", serif;
+  width: 100%;
 }
 h1 {
   color: #66bfbf;
@@ -50,6 +51,9 @@ p {
 }
 .middle-container {
   margin: 100px 0;
+}
+.mountainimg{
+  max-width: 100%;
 }
 .bottom-container {
   background-color: #66bfbf;
