--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,12 @@ body {
   color: #40514e;
   margin: 0;
   text-align: center;
-  font-family: "Kaisei Tokumin", serif;
+  font-family: "Roboto", sans-serif;
   max-width: 100%;
 }
 h1 {
   color: #66bfbf;
-  font-family: "Caveat", cursive;
+  font-family: "Allison", cursive;
   font-size: 5.625rem;
   line-height: 2;
   margin: 50px auto 0 auto;
